Prevent full movie list sort buttons from wrapping in some browsers

--- a/style/non-minified/style2.css
+++ b/style/non-minified/style2.css
@@ -150,7 +150,6 @@ footer {font-family: Noto; max-width: 1280px; margin: auto; text-align: right;}
     margin-bottom: 5px;
     padding: 1%;
     font-size: 28pt;
-    font-weight: bold;
     font-family: "Hemi";
 }
 
